Fix player being too small on small width displays

--- a/assets/assets/css/parts/player-modal.scss
+++ b/assets/assets/css/parts/player-modal.scss
@@ -1,3 +1,5 @@
+@import "../variables";
+
 .plyrmdl-thumb:hover {
 	cursor: pointer
 }
@@ -50,7 +52,9 @@
 		position: relative;
 		margin-left: auto;
 		margin-right: auto;
-		max-width: 50vw !important;
+		@media (min-width: $bs-breakpoint-md) {
+			max-width: 50vw !important;
+		}
 		&:before {
 			display: block;
 			content: "";
